update doc for version 1.6.0